# mcp-forge-demo

./: .env.example  .gitignore  README.md  pyproject.toml  start_gateway.sh
agent/: __main__.py  utils.py
api/: dependencies.py  langgraph_weather_agent.py  main.py  routes.py
core/: model_selector.py  settings.py
server/: __main__.py  tools.py
