[project]
name = "mcp-weather-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.29",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "mcp-contextforge-gateway>=0.4.0",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.5",
]
